# Vulkan-Playground

./: CMakeLists.txt  CMakePresets.json  Main.cpp  README.md  compile_shader.bat
resource/shader/: simple_shader.frag  simple_shader.vert
source/app/include/: MyApp.hpp  MyWindow.hpp
source/app/src/: MyApp.cpp  MyWindow.cpp
